# ChangeLog for x11-themes/ximian-artwork
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/ximian-artwork/ChangeLog,v 1.25 2005/09/07 13:42:37 gustavoz Exp $

  07 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  ximian-artwork-0.2.32.1.ebuild:
  Stable on sparc

  17 Aug 2005; Jonathan Smith <smithj@gentoo.org>
  ximian-artwork-0.2.32.1.ebuild:
  made xorg-x11 the x11 implementation... to help modular x... on ALL the
  files this time

  17 Aug 2005; Jonathan Smith <smithj@gentoo.org>
  ximian-artwork-0.2.29.0.6.3.ebuild:
  made xorg-x11 the x11 implementation... to help modular x

*ximian-artwork-0.2.32.1 (25 Jun 2005)

  25 Jun 2005; Alastair Tse <liquidx@gentoo.org>
  +files/ximian-artwork-0.2.32.1-disable_industrial_engine.patch,
  ximian-artwork-0.2.29.0.6.3.ebuild, +ximian-artwork-0.2.32.1.ebuild:
  version bump to use DAG src rpms since ximian's own source rpms are hidden
  and i don't want to use their binary rpms. fix homepage and cleanup (#94198)

  07 Apr 2005; Simon Stelling <blubb@gentoo.org>
  ximian-artwork-0.2.29.0.6.3.ebuild:
  stable on amd64

  09 Jan 2005; Joe McCann <joem@gentoo.org>
  ximian-artwork-0.2.29.0.6.3.ebuild:
  Marking x86 stable

  09 Jan 2005; Joe McCann <joem@gentoo.org>
  ximian-artwork-0.2.29.0.6.3.ebuild:
  fix for libtool problem, closes 76043

  03 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  ximian-artwork-0.2.26.0.6.1-r1.ebuild, ximian-artwork-0.2.29.0.6.2.ebuild:
  Make needed changes for x11-base/xfree -> virtual/x11.

  03 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  ximian-artwork-0.2.29.0.6.3.ebuild:
  Drop useless portageq calls.

  23 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  ximian-artwork-0.2.26.0.6.1-r1.ebuild, ximian-artwork-0.2.29.0.6.2.ebuild,
  ximian-artwork-0.2.29.0.6.3.ebuild:
  QA - fix use invocation

  30 Apr 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  ximian-artwork-0.2.29.0.6.3.ebuild:
  Stable on sparc
