@@ -1,1 +1,3 @@
 MD5 2ead99009e939f8197d47a4785898f20 ximian-artwork-0.2.32-1.rf.src.rpm 3958480
+RMD160 83ba9fcbffced7396e34959f4a6d0cc522840db6 ximian-artwork-0.2.32-1.rf.src.rpm 3958480
+SHA256 bbb520faa99e08bc562a09bcf495291296f52f18a1323b228250d5fc5e3bfcff ximian-artwork-0.2.32-1.rf.src.rpm 3958480
