@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/ximian-artwork/ximian-artwork-0.2.32.1.ebuild,v 1.3 2005/09/07 13:42:37 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/ximian-artwork/ximian-artwork-0.2.32.1.ebuild,v 1.4 2006/10/21 19:32:14 dertobi123 Exp $
 
 inherit rpm eutils versionator
 
@@ -14,7 +14,7 @@ HOMEPAGE="http://www.novell.com/products/desktop/"
 SRC_URI="http://apt.sw.be/packages/ximian-artwork/ximian-artwork-${MY_PV}-${RPM_V}.rf.src.rpm"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 sparc ~amd64 ~ppc"
+KEYWORDS="~amd64 ppc sparc ~x86"
 IUSE="xmms"
 
 DEPEND="sys-devel/autoconf
