@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/ximian-artwork
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/ximian-artwork/ChangeLog,v 1.25 2005/09/07 13:42:37 gustavoz Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/ximian-artwork/ChangeLog,v 1.26 2006/10/21 19:32:14 dertobi123 Exp $
+
+  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
+  ximian-artwork-0.2.32.1.ebuild:
+  ppc stable
 
   07 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   ximian-artwork-0.2.32.1.ebuild:
